--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                                                 <span class="subtitle">Visit my portfolio & Hire me</span>
                                                                 <h2 class="title small-h2">About Me</h2>
                                                             </div>
-                                                            <p class="discription color-body">I'm a software Engineer. Need to secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.
+                                                            <p class="discription color-body">I'm a Computer Science Engineering Student. Need to secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.
                                                                 
                                                             </p>
                                                             <p class="discription color-body">Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.
