--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             </div>
                             <div class="header-info-content">
                                 <h4 class="title">Vanitha A</h4>
-                                <div class="status-info">I am a Software Developer</div>
+                                <div class="status-info">I am a Computer Science Engineering Student</div>
                                 <!-- social sharea area -->
                                 <div class="social-share-style-1 border-none mt--40">
                                     <ul class="social-share d-flex liststyle">
@@ -233,7 +233,7 @@
                                                                                 class="inner psudo-after-none psudo-after-none">
                                                                                 <div class="heading">
                                                                                     <div class="title">
-                                                                                        <h4>B.E Computer Science</h4>
+                                                                                        <h4>B.E Computer Science Enngineering</h4>
                                                                                         <span>Sri Eshwar college of Engineering</span>
                                                                                     </div>
                                                                                     <div class="date-of-time">
