--- a/index.html
+++ b/index.html
@@ -603,13 +603,13 @@
                                                             </div>
                                                             <div class="title-area">
                                                                 <h4 class="title">Vanitha A</h4>
-                                                                <span>Software Engineer</span>
+                                                                <span>Computer Science Engineering Student</span>
                                                             </div>
                                                             <div class="description">
                                                                 <p>Connect with me via
                                                                 </p>
                                                                 <span class="phone">Phone: <a
-                                                                        href="tel:01941043264">+91 8608183967</a></span>
+                                                                        href="tel:+91 8608183967">+91 8608183967</a></span>
                                                                 <span class="mail">Email: <a
                                                                         href="vanitha.a2020cse@sece.ac.in">vanitha.a2020cse@sece.ac.in</a></span>
                                                             </div>
