--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                                                                 <span class="phone">Phone: <a
                                                                         href="tel:+91 8608183967">+91 8608183967</a></span>
                                                                 <span class="mail">Email: <a
-                                                                        href="vanitha.a2020cse@sece.ac.in">vanitha.a2020cse@sece.ac.in</a></span>
+                                                                        href="mailto:vanitha.a2020cse@sece.ac.in">vanitha.a2020cse@sece.ac.in</a></span>
                                                             </div>
                                                             <div class="social-area">
                                                                 <div class="name">FIND WITH ME</div>
